--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,23 +1,24 @@
 :root {
-    --black: #333;
-    --gray: #555;
-    --white: #fff;
+  --black: #333;
+  --gray: #555;
+  --white: #fff;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    color:  var(--gray);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 18px;
-line-height: 1.4;
+  color: var(--gray);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 18px;
+  line-height: 1.4;
 }
 
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
 h1,
@@ -26,5 +27,5 @@ h3,
 h4,
 h5,
 h6 {
-    color: var(--black);
+  color: var(--black);
 }
